--- a/app/fonts.css
+++ b/app/fonts.css
@@ -14,3 +14,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'SpeechesAndCream-Choked';
+  src: url('/fonts/SpeechesAndCream-Choked.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
